<resources>

    <string name="facebook_app_id">225836064447574</string>

   <string name="facebook_app_secret">6885bd2be3685ef0facc8eb49548cc56</string>
   <!-- . -->
    <string name="google_plus_client_id">760201433906-c1bvlrmgd2hlo6udukrdf2le0o0iho5s.apps.googleusercontent.com</string>

    <!-- . -->
    
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>


    <string name="app_name">DrGrep</string>
    <string name="h1">"@m.koushik"</string>
    <string name="h2">"#electronics, #iPod, #calcutta"</string>

    <string name="network_error">"Network Error!"</string>
    <string name="implementation_pending">"Implementation Pending."</string>

    <string name="add_more_photo">"more Photo"</string>
    <string name="add_more_product">"more Product"</string>
    <string name="take_a_new_photo">"Take a new Photo"</string>
    <string name="select_from_album">"Select from Album"</string>
    <string name="title">"Title"</string>
    <string name="description">"Description"</string>
    <string name="no_data_found">"No Data found."</string>
    <string name="no_location_detected">"NO Location Detected"</string>
    <string name="failed_to_get_location_">"Failed to get location, using last location."</string>
    <string name="price">"Price"</string>
    <string name="category">"Category"</string>
    <string name="inr">"INR"</string>
    <string name="inr_">"INR \u20B9"</string>
    <string name="type">"Type"</string>
    <string name="keep">"KEEP"</string>
    <string name="ok">"OK"</string>
    <string name="rupee_sign">"\u20B9"</string>
    <string name="rupee__">"\u20B90.00"</string>
    <string name="new_">"New"</string>
    <string name="likes">"likes"</string>
    <string name="comments">"comments"</string>
    <string name="cancel">"CANCEL"</string>
    <string name="discard">"DISCARD"</string>
    <string name="save">"SAVE"</string>
    <string name="use">"Use"</string>
    <string name="use_location">"Use Location"</string>
    <string name="used">"used"</string>
    <string name="please_enable_gps">"Please enable GPS."</string>
    <string name="congratulations">"Congratulations"</string>
    <string name="search">"Search"</string>
    <string name="edit">"Edit"</string>
    <string name="delete">"Delete"</string>
    <string name="change_location">"CHANGE LOCATION"</string>
    <string name="location_unknown">"Unknown Location"</string>
    <string name="please_add___image">"Please add atleat one image"</string>
    <string name="product_edited_successfully_">"Product Successfully Edited."</string>
    <string name="select_photo">"Select Photo"</string>
    <string name="product_will_appear_to_the_people_shortly">"Product will appear to the people shortly"</string>
    <string name="did_you_take_">"Did you take a wrong Photo?"</string>
    <string name="photo_was_not_taken">"Photo was not taken."</string>
    <string name="do_you_want_to_remove_this_image">"Do you want to remove this image?"</string>
    <string name="do_you_want_to_delete_this_product">"Do you want to delete this product?"</string>
    <string name="if_you_go_">"If you go back, your changes will be discarded."</string>
    <string name="please_fill_in_">"Please fill in all the information."</string>
    <string name="price_must_be_">"Price must not be less than \u20B91.00"</string>
    <string name="is_your_default_location_">"Is your default location same as business location?"</string>
    <string name="please_provide_proper_">"Please provide proper business location to attract people to your business."</string>
    <string name="lorem_ipsum_">"Lorem ipsum dolor sit amet, blandit orci risus sollicitudin, elit ultricies massa maecenas&#8230;"</string>
    <string name="sign_in_register">"Sign In/Register"</string>
    <string name="list_product">"List"</string>
    <string name="browse_product">"Products"</string>
    <string name="my_shop">"My shops"</string>
    <string name="shop_settings">"Shop Settings"</string>
    <string name="my_chats">"My Chats"</string>
    <string name="shop_name">"Name of the shop"</string>
    <string name="shop_description">"Description of the shop"</string>
    <string name="shop_location">"Location"</string>
    <string name="shop_email">"Email"</string>
    <string name="shop_phone">"Phone"</string>
    <string name="shop_weblink">"Website"</string>



    <string-array name="spinner_item1">
        <item>- Type -</item>
        <item>New</item>
        <item>Used</item>
    </string-array>
    <string name="title_activity_signin">SigninActivity</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="title_activity_user_product_list">UserProductList</string>
    <string name="if_you_are_a_seller__">"If you are a seller, this is also the best way to attract more people locally."</string>
    <string name="turn_on_location_service">"TURN ON LOCATION SERVICE"</string>
    <string name="until_you_have_internet_back__">"Until you have internet back, please know more about us from www.drgrep.com"</string>
    <string name="looks_like_someone_is__">"Looks like someone is troubling you with your internet connection"</string>
    <string name="turn_on_your_location_service__">"Turn on your location service in order to find best products around you."</string>
    <string name="allow">"ALLOW"</string>
    <string name="go_online">"GO ONLINE"</string>
    <string name="checking_network_connectivity">"Checking Network Connectivity"</string>
    <string name="title_activity_user_chat_entry_holding_page">UserChatEntryHoldingPage</string>
 <!--  -->
    <string name="dr_talk">"DrTalk"</string>
    <string name="sharestring">"Share"</string>
    <string name="infostring">"Support"</string>
    <string name="action_settings">Settings</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="search_hint">Search in DrGrep</string>
    <string name="menu_search">Search</string>
    <string name="menu_location">Location</string>
    <string name="title_activity_search_input">SearchInputActivity</string>
    <string name="title_activity_product_list">Products</string>
    <string name="users">USERS</string>
    <string name="title_activity_splash">SplashActivity</string>


     <string name="invite_message">Hey, check out Applozic -
        Plug &amp; Play Messaging: http://www.applozic.com</string>

     <string name="default_media_location_folder">DrGrep</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_aboutus">AboutusActivity</string>
    <string name="title_activity_customer_support">CustomerSupport</string>
    <string name="title_activity_feed_back">FeedBackActivity</string>
    <string name="button_feedback">Send feedback</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="Products">ProductListActivity</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_store">AddStoreActivity</string>
    <string name="title_activity_shop_settings">ShopSettingsActivity</string>
    <string name="title_activity_shop_detail">ShopDetail</string>
    <string name="title_activity_add_products_to_shop">AddProductsToShop</string>


    <!--  -->
</resources>