<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_270dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded1"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="14dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="left"
                android:text="@string/turn_on_location_service"
                android:textColor="@color/app_grey"
                android:textSize="@dimen/app_font_size" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/g_map" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/turn_on_your_location_service__"
                android:textSize="@dimen/app_font_size"
                android:textColor="@color/app_grey" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:textColor="@color/app_black"
                android:text="@string/if_you_are_a_seller__"
                android:textSize="@dimen/app_font_size" />

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:baselineAligned="false"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingRight="24dp" >

            <LinearLayout
                android:id="@+id/dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textColor="@color/app_grey"
                    android:textSize="@dimen/app_font_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialog_allow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allow"
                    android:textColor="@color/app_orange"
                    android:textSize="@dimen/app_font_size" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>