<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_270dp"
    android:layout_height="wrap_content"
    android:background="@drawable/style_dialog"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="14dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingTop="5dp" >

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/did_you_take_"
                android:textColor="@color/app_grey"
                android:textSize="@dimen/app_font_size" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/if_you_go_"
                android:textColor="@color/app_black"
                android:textSize="@dimen/app_font_size" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingRight="14dp" >

            <LinearLayout
                android:id="@+id/keep"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep"
                    android:textColor="@color/app_color3"
                    android:textSize="@dimen/app_font_size" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/discard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discard"
                    android:textColor="@color/app_orange"
                    android:textSize="@dimen/app_font_size" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>