<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/applozic_theme_color_primary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="60dp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_shop_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <EditText
            android:id="@+id/input_shop_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shop_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_shop_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_shop_name">
        <EditText
            android:id="@+id/input_shop_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shop_description" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_shop_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_shop_description">
    <EditText
            android:id="@+id/input_shop_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shop_location" />
    </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_white_24dp" />
</android.support.design.widget.CoordinatorLayout >
