<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:longClickable="false"
    android:background="@color/transparent">

    <LinearLayout
        android:id="@+id/body"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#f3f3f3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <RelativeLayout
            android:id="@+id/sign_in_register"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:clickable="true"
            android:paddingRight="14dp"
            android:background="@drawable/sample_profile">
            <TextView
                android:id="@+id/tv_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/app_header_text_size"
                android:text="@string/sign_in_register"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF6600"
                android:enabled="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/browse_product"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="#f3f3f3"
            android:clickable="true"
            android:paddingRight="14dp"
            android:textAlignment="textStart"
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:contextClickable="false">

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/app_header_text_size"
                android:text="@string/browse_product"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF6600"
                android:textAlignment="textStart"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/bpi"
                android:layout_toEndOf="@+id/bpi" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/bpi"
                android:src="@drawable/browse_product"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/list_product"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f3f3f3"
            android:clickable="true"
            android:paddingRight="14dp"
            style="@style/Base.TextAppearance.AppCompat.Button">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/lpi"
                android:src="@drawable/list_product"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/app_header_text_size"
                android:text="@string/list_product"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF6600"
                android:layout_toRightOf="@+id/lpi"
                android:layout_toEndOf="@+id/lpi"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/my_chats"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f3f3f3"
            android:clickable="true"
            android:paddingRight="14dp"
            style="@style/Base.TextAppearance.AppCompat.Button">

            <TextView
                android:id="@+id/tv4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/app_header_text_size"
                android:text="@string/my_chats"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF6600"
                android:layout_toRightOf="@+id/mci"
                android:layout_toEndOf="@+id/mci"
                android:layout_centerVertical="true" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/mci"
                android:src="@drawable/my_chat"
                android:layout_centerVertical="true"
                android:longClickable="false" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#f3f3f3"
            android:clickable="true"
            android:paddingRight="14dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/blank_area_holding"
            android:layout_toStartOf="@+id/blank_area_holding">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:id="@+id/lop"
                android:src="@drawable/sign_out"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/app_header_text_size"
                android:text="  Logout"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#FF6600"
                android:layout_toRightOf="@+id/lop"
                android:layout_toEndOf="@+id/lop"
                android:layout_centerVertical="true" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@+id/body"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:background="@color/transparent"
        android:id="@+id/blank_area_holding"
        android:layout_toRightOf="@+id/body"></RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="456dp"
        android:layout_marginStart="456dp" />

</RelativeLayout>